Implemented logs and default parameters in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=QRCodeService
+# QR Code Generation Settings
+qrcode.default.size=250
+qrcode.min.size=150
+qrcode.max.size=350
+qrcode.default.correction=L
+qrcode.allowed.types=png,jpeg,jpg,gif
