Implemented custom Global Exceptions to handle errors without repeated try catch blocks, cleaned  QRCodeRequest by implementing defaults in the application.properties. default where set for every param except for content.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.application.name=QRCodeService
 qrcode.default.size=250
 qrcode.min.size=150
 qrcode.max.size=350
-qrcode.default.correction=L
+qrcode.default.correction=H
+qrcode.default.type=png
 qrcode.allowed.types=png,jpeg,jpg,gif
